mcabber (0.10.3)

 * [UI] Add option 'iq_time_hide'
 * [UI] Add 'iq_version_hide', 'iq_version_hide_version'
 * Improved handling of damaged history log files
 * Switch to libotr v4 API (Myhailo Danylenko)
 * Add SSL options (Frank Zschockelt)
   These options require a patched Loudmouth library.
   - "ssl_ciphers" to define the allowed ciphers
   - "ssl_ca" to set additional trusted certificates
 * Fix compilation for old loudmouth libraries (Frank Zschockelt)
 * Add 'color_timestamp' to highlight timestamp added by server (Hermitifier)
 * New python based event script using OS X 10.8 notification center (Sharoon Thomas)
 * Handle SIGHUP signal (Dominik George)
 * Misc. bugfixes

 -- Mikael, 2014-05-08

mcabber (0.10.2)

 * Update receipts handling according to recent XEP updates (Myhailo Danylenko)
 * Update and modularize the FIFO system (Myhailo Danylenko)
 * Modularize url_regex
 * [UI] Add readmark support - a line is displayed afer the last read message
 * New command /buffer readmark
 * Add command /iline clear_history
 * Add command /iline iline_insert (Hermitifier)
 * Add command /room setopt flag_joins (Hermitifier)
 * The command /say_to has a new option '-e' so that "\n" can be used
 * [MUC] Improve MUC support (Myhailo Danylenko)
 * [MUC] Add support for XEP-0249 / Direct MUC Invitations (Myhailo Danylenko)
 * [MUC] Refresh the roster when MUC bookmarks are received (Jan Zachorowski)
 * [MUC] preserve bookmark when updating a non-joined room  (Jan Zachorowski)
 * [MUC] Fix bookmarks losing autojoin attribute  (Hermitifier)
 * [MUC] Display real JIDs in non-anonymous rooms (Hermitifier)
 * [MUC] New option 'muc_bookmark_autoupdate' (Hermitifier)
 * [MUC] Fix whois / auto_whois
 * [UI] Remove deprecated invisible status
 * [UI] Go back to the first buddy with /roster next_unread when there are
        no more unread messages (Simon Jacquin)
 * [UI] Add option 'roster_no_leading_space' to remove the extra space